feat: 添加任务栏，后台运行交互，接入memoryjs

--- a/tsconfig.electron.json
+++ b/tsconfig.electron.json
@@ -7,7 +7,11 @@
     "resolveJsonModule": true,
     "esModuleInterop": true,
     "allowJs": true,
-    "outDir": "dist/main"
+    "outDir": "dist",
+    "baseUrl": "./",
+    "paths": {
+      "@s/*": ["./src/server/*"]
+    },
   },
   "include": [
     "src/main/app.ts",
