--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "vite-electron-typescript-template",
+  "name": "genshin-tool",
   "version": "0.0.0",
   "main": "dist/main/app.js",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "serve": "vite preview",
-    "electron:dev": "cross-env NODE_ENV=development electron index.js",
+    "electron:dev": "chcp 65001 && cls && cross-env NODE_ENV=development electron index.js",
     "electron:build": "rimraf dist && vite build && tsc -p tsconfig.electron.json && electron-builder"
   },
   "dependencies": {
@@ -29,20 +29,27 @@
     "rimraf": "^3.0.2",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.3",
-    "vite": "^2.0.5"
+    "vite": "^2.0.5",
+    "memoryjs": "^3.0.0"
   },
   "build": {
-    "appId": "your.id",
+    "appId": "duqpi276327zdsi",
     "mac": {
       "category": "your.app.category.type"
     },
     "files": [
-      "dist/main/**/*",
-      "dist/render/**/*"
+      "dist/**/*",
+      "dist/**/*"
     ],
-    "directories": {
-      "output": "dist/release"
+    "nsis": {
+      "perMachine": true,
+      "oneClick": false,
+      "allowToChangeInstallationDirectory": true,
+      "displayLanguageSelector": true,
+      "createDesktopShortcut": true
     },
-    "license": "MIT"
+    "directories": {
+      "output": "dist"
+    }
   }
 }
