--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "vite",
     "build": "vite build",
     "serve": "vite preview",
-    "electron:dev": "chcp 65001 && cls && cross-env NODE_ENV=development electron index.js",
+    "electron:dev": "chcp 65001 && cross-env NODE_ENV=development electron index.js",
     "electron:build": "rimraf dist && vite build && tsc -p tsconfig.electron.json && electron-builder"
   },
   "dependencies": {
@@ -26,11 +26,12 @@
     "cross-env": "^7.0.3",
     "electron": "^16.0.0",
     "electron-builder": "^22.13.1",
+    "memoryjs": "^3.0.0",
     "rimraf": "^3.0.2",
+    "screenshot-desktop": "^1.12.7",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.3",
-    "vite": "^2.0.5",
-    "memoryjs": "^3.0.0"
+    "vite": "^2.0.5"
   },
   "build": {
     "appId": "duqpi276327zdsi",
